[🚀 사이클2 - 미션 (예약 대기 승인)] 아나키(이수지) 미션 제출합니다. (#479)
* feat: 요청 시간 저장 컬럼 추가

* feat: 컨트롤러 요청 시간 체크 기능 구현

* feat: 요청 시간 저장 기능 구현

* docs: 예약 대기 승인 기능 요구 사항 작성

* refactor: 쿼리 상의 순번 정렬 로직 제거

* feat: 동일한 날짜, 시간, 테마의 예약들을 조회 기능 구현

* feat: 요청 시간 기반 순번 정렬 기능 구현

* refactor: 이름 기반 조회 컨트롤러 수정

* refactor: calculateOrder의 불필요한 existsBy 분기 제거

* refactor: 예약 상태를 status 컬럼 대신 요청 순서로 파생하도록 수정

* feat: 예외 발생 시 로그를 남기도록 구현

* fix: 삭제된 상태 컬럼으로 인한 오류 수정

* fix: TIME ZONE에 대한 표현 삭제

* fix: 사용되지 않는 WAITING 삭제

* fix: 프론트엔드 순번 표현 방식 수정

* feat: 관리자 페이지 예약 확정/대기 순번 조회 기능 구현

* test: 변경된 코드에 따라 테스트 수정

* refactor: 서비스로 트랜잭션 어노테이션 이동

* refactor: DB 예외를 도메인 예외로 변환

* test: 도메인 예외로 변환으로 인한 테스트 수정

* docs: 기능 구현 사항 및 API 명세

* refactor: DAO를 Repository로 네이밍 변경

* refactor: 불필요한 중간 변수 인라인화

* test: 레포지토리 테스트를 data.sql 없이 수행할 수 있도록 수정

* test: 서비스 테스트를 Mock 기반 단위 테스트로 변경

* test: 컨트롤러 테스트를 data.sql 없이 수행할 수 있도록 수정

* docs: README 기능 목록 설명 보강

* refactor: 도메인이 스스로 요청 시각을 비교하도록 수정

* fix: 잘못된 requested_at 설정 수정

* refactor: rowMapper의 선언 순서 및 사용처 리팩터링