@@ -3,66 +3,93 @@ package roomescape.service;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.dao.DuplicateKeyException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
-import roomescape.dao.ReservationDao;
-import roomescape.dao.ReservationTimeDao;
-import roomescape.dao.ThemeDao;
+import org.springframework.transaction.annotation.Transactional;
+import roomescape.repository.ReservationRepository;
+import roomescape.repository.ReservationTimeRepository;
+import roomescape.repository.ThemeRepository;
 import roomescape.domain.Reservation;
-import roomescape.dto.projection.ReservationOrderProjection;
-import roomescape.domain.ReservationStatus;
 import roomescape.domain.ReservationTime;
 import roomescape.domain.Theme;
 import roomescape.dto.request.ReservationRequest;
 import roomescape.dto.request.UserReservationUpdateRequest;
 import roomescape.dto.response.ReservationOrderResponse;
 import roomescape.dto.response.ReservationResponse;
+import roomescape.dto.response.ReservationTimeResponse;
+import roomescape.dto.response.ThemeResponse;
+import roomescape.exception.DuplicateReservationException;
 import roomescape.exception.IdNotFoundException;
 
 @Service
+@Transactional(readOnly = true)
 public class ReservationService {
-    private final ReservationDao reservationDao;
-    private final ReservationTimeDao reservationTimeDao;
-    private final ThemeDao themeDao;
+    private final ReservationRepository reservationDao;
+    private final ReservationTimeRepository reservationTimeDao;
+    private final ThemeRepository themeDao;
 
-    public ReservationService(ReservationDao reservationDao, ReservationTimeDao reservationTimeDao, ThemeDao themeDao) {
+    public ReservationService(ReservationRepository reservationDao, ReservationTimeRepository reservationTimeDao, ThemeRepository themeDao) {
         this.reservationDao = reservationDao;
         this.reservationTimeDao = reservationTimeDao;
         this.themeDao = themeDao;
     }
 
-    public List<ReservationOrderResponse> find(String name) {
-        List<ReservationOrderProjection> response = reservationDao.findByName(name);
-        return response.stream().map(ReservationOrderResponse::from).toList();
+    public List<ReservationOrderResponse> findByName(String name) {
+        return reservationDao.findByName(name).stream()
+                .map(reservation -> {
+                    long order = calculateOrder(reservation);
+                    return new ReservationOrderResponse(
+                            reservation.getId(),
+                            reservation.getName(),
+                            reservation.getDate(),
+                            ReservationTimeResponse.from(reservation.getTime()),
+                            ThemeResponse.from(reservation.getTheme()),
+                            order);
+                })
+                .toList();
     }
 
-    public List<ReservationResponse> findAll() {
-        return reservationDao.findAll().stream().map(ReservationResponse::from).collect(Collectors.toList());
+    public List<ReservationOrderResponse> findAll() {
+        return reservationDao.findAll().stream()
+                .map(reservation -> {
+                    long order = calculateOrder(reservation);
+                    return new ReservationOrderResponse(
+                            reservation.getId(),
+                            reservation.getName(),
+                            reservation.getDate(),
+                            ReservationTimeResponse.from(reservation.getTime()),
+                            ThemeResponse.from(reservation.getTheme()),
+                            order);
+                })
+                .toList();
     }
 
-    public ReservationResponse save(ReservationRequest request) {
+    @Transactional
+    public ReservationResponse save(ReservationRequest request, LocalDateTime requestedAt) {
         ReservationTime time = getValidReservationTime(request.timeId());
         Theme theme = getValidTheme(request.themeId());
 
         validateReservationDateTime(request.date(), time);
 
-        ReservationStatus status = checkReservationStatus(request.date(), theme, time);
+        Reservation reservation = new Reservation(request.name(), request.date(), time, theme, requestedAt);
 
-        Reservation reservation = new Reservation(request.name(), request.date(), time, theme, status);
-
-        Reservation saved = reservationDao.save(reservation);
-        return ReservationResponse.from(saved);
+        try {
+            Reservation saved = reservationDao.save(reservation);
+            return ReservationResponse.from(saved);
+        } catch (DuplicateKeyException e) {
+            throw new DuplicateReservationException("이미 동일한 예약 또는 대기 신청이 존재합니다.");
+        }
     }
 
+    @Transactional
     public ReservationResponse update(Long id, UserReservationUpdateRequest request) {
         ReservationTime time = getValidReservationTime(request.timeId());
         Theme theme = getValidTheme(request.themeId());
 
         validateReservationDateTime(request.date(), time);
-        ReservationStatus status = checkReservationStatus(request.date(), theme, time);
 
-        if (status == ReservationStatus.WAITING) {
+        if (reservationDao.existsBy(request.date(), theme, time)) {
             throw new IllegalArgumentException("요청하신 날짜 및 시간에는 예약이 존재해 변경 불가합니다. 대기를 원하신다면 취소 후 신청해주세요.");
         }
 
@@ -70,8 +97,21 @@ public class ReservationService {
         return ReservationResponse.from(newReservation);
     }
 
+    @Transactional
     public void delete(Long id) {
         reservationDao.delete(id);
+    }
+
+
+    private long calculateOrder(Reservation reservation) {
+        List<Reservation> sameSlot = reservationDao.findBySlot(
+                reservation.getDate(),
+                reservation.getTime().getId(),
+                reservation.getTheme().getId());
+
+        return sameSlot.stream()
+                .filter(other -> other.isRequestedBefore(reservation))
+                .count();
     }
 
     private ReservationTime getValidReservationTime(Long timeId) {
@@ -95,13 +135,5 @@ public class ReservationService {
         if (targetDateTime.isBefore(LocalDateTime.now())) {
             throw new IllegalArgumentException("이미 지난 시간/날짜는 예약할 수 없습니다.");
         }
-    }
-
-    private ReservationStatus checkReservationStatus(LocalDate date, Theme theme, ReservationTime time) {
-        if (reservationDao.existsBy(date, theme, time)) {
-            return ReservationStatus.WAITING;
-        }
-
-        return ReservationStatus.CONFIRMED;
     }
 }
